--- a/src/app/workspace/welcome-tab/welcome-tab.component.scss
+++ b/src/app/workspace/welcome-tab/welcome-tab.component.scss
@@ -46,7 +46,7 @@
 
     h1 {
         font-weight: bold;
-        font-size: 200%;
+        font-size: 1.6rem;
         color: #444444;
     }
 
@@ -60,20 +60,19 @@
 }
 
 .current-investments-container {
-    // width: 100%;
     margin: 2% 2% 0 8%;
     display: flex;
-    //  flex-flow: row;
     flex-wrap: wrap;
     justify-content: space-between;
 
     .current-investments{
         margin: 2% 0 0 0;
-        // width: 100%;
         h1 {
             font-weight: bold;
-            font-size: 200%;
+            font-size: 1.6rem;
             color: #444444; 
+            margin: 0%;
+            padding: 0%;
         }
     }
 }
@@ -81,7 +80,6 @@
 .counter-container {
     display: flex;
     justify-content: space-evenly;
-  
     margin-top: 4%;
     width: 100%;
     height: 400px;
@@ -89,38 +87,30 @@
    
     .container-item{
         padding-top: 8%; 
-        //  line-height: 5;
         p {
             font-size: 140%;
             font-weight: bold;
             color:white;
-            // font-family: 'Nunito Sans', sans-serif;
             margin: 0%;
             background: none repeat scroll 0 0 rgba(0,0,0,.5);
         }
     }
-    
 }
 
 .company-info-container {
-   
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    // height: 500px;
     margin: 3%;
     color: #444444; 
     .map{
         height: 400px;
         width: 650px
-        // height: 100%;
-        // width: 40%;
     }
 }
 
 .company-info-container-mobile {
    .contact{
-    
         font-weight: bold;
         font-size: 200%;
         color: #444444; 
@@ -129,15 +119,11 @@
 
     display: flex;
     flex-wrap: wrap;
-    //justify-content: space-evenly;
-    // height: 500px;
     margin: 3% 8% 3% 8% ;
     
     color: #444444; 
     .map{
         height: 400px;
         width: 650px
-        // height: 100%;
-        // width: 40%;
     }
 }
