about us finished

--- a/src/app/workspace/about-us/about-us.component.html
+++ b/src/app/workspace/about-us/about-us.component.html
@@ -21,18 +21,29 @@
         Naszą dewizą jest wysoka jakość i solidność, a celem satysfakcja klientów.
     </p>
         
-    <p>
+    <h3>
         Przez kilka lat działalności wybudowaliśmy:
-    </p>
+    </h3>
     <ul>
-            <li>Słoneczna Wadowska - osiedle dwóch domów wielorodzinych ble ble ble ble ble vle</li>
-            <li>Słoneczna Wierzbowa- osiedle dwóch domów wielorodzinych ble ble ble ble ble vle </li>
-            <li>Apartamenty nad wilgą- osiedle dwóch domów wielorodzinych ble ble ble ble ble vle</li>
-            <li>LA DUBIOS - osiedle dwóch domów wielorodzinych ble ble ble ble ble vle</li>
-            <li>Apartamenty Unruga - osiedle dwóch domów wielorodzinych ble ble ble ble ble vle </li>
-            <li>Arkadia Kokotów - osiedle dwóch domów wielorodzinych ble ble ble ble ble vle</li>
-            <li>Słoneczna zacisze Kokotów - osiedle dwóch domów wielorodzinych ble ble ble ble ble vle</li>
-            <li>Osiedle pod Olchami - osiedle dwóch domów wielorodzinych ble ble ble ble ble vle </li>
-            <li>Zakątek Kokotów - osiedle dwóch domów wielorodzinych ble ble ble ble ble vle</li>
+            <li><b>Słoneczna Wadowska</b> - kameralne osiedle ośmiu domów jednorodzinnych w zabudowie bliźniaczej zlokalizowane w Nowej Hucie.</li>
+            <li><b>Słoneczna Wierzbowa</b> - kameralne osiedle 16 mieszkań (8 domów jednorodzinnych dwulokalowych – typu zabudowa bliźniacza) usytuowanych przy ulicy Wierzbowej w miejscowości Modlnica, gmina Wielka Wieś.</li>
+            <li><b>Apartamenty nad wilgą</b> - kameralny kompleks  4 przestronnych mieszkań  z balkonami, położony  w urokliwym, spokojnym i pełnym zieleni miejscu, w dzielnicy Krakowa – Opatkowice.</li>
+            <li><b>LA DUBIOS</b> - kameralny kompleks dwóch domów składający się z czterech niezależnych, bezczynszowych mieszkań.</li>
+            <li><b>Apartamenty Unruga</b> - kameralny kompleks 6 apartamentów w zacisznej, zielonej dzielnicy Krakowa – Skotniki, przy ulicy Unruga/Winnicka.</li>
+            <li><b>Arkadia Kokotów</b>Arkadia Kokotów - to kolejny etap inwestycji  zlokalizowanej na granicy Krakowa i Wieliczki, wśród  terenów zielonych. To  propozycja dla rodzin oraz osób ceniących sobie spokój, a jednocześnie bliskość centrum miasta.</li>
+            <li><b>Słoneczna zacisze Kokotów</b> - to kameralne osiedle sześciu domów jednorodzinnych w zabudowie bliźniaczej zlokalizowane w Kokotowie, w gm. Wieliczka przy ul. Gaisko – przecznica od ul. Kokotowskiej.</li>
+            <li><b>Osiedle pod Olchami</b> - kameralne osiedle 16 domów dwupoziomowych  (8 domów jednorodzinnych dwulokalowych – typu zabudowa bliźniacza) usytuowanych przy ulicy Hoyera w dzielnicy Stary Biezanów. </li>
+            <li><b>Zakątek Kokotów</b> - to dwa domy jednorodzinne dwulokalowe w Kokotowie, przy ul.Gajsko </li>
+            <li><b>Zielone Owczary</b> - to mini osiedle stanowiące dwa domy jednorodzinne po 97 m2 powierzchni użytkowej, położone w malowniczych Owczarach – gminie Zielonki.</li>
+            <li><b>Osiedle Rączna</b> - osiedle domów w podkrakowskiej miejscowości Rączna, 15 km od Rynku Głównego.</li>
+            <li><b>ZIELONY ZAKĄTEK</b>- to kameralny kompleks dwóch domów składający się z czterech segmentów.</li>
+            <li><b>Osiedle Rzeplin</b> - to budynki jednorodzinne w zabudowie bliźniaczej.</li>
+            <li><b>Osiedle Pod Brzozami</b> - zakończona inwestycja w Kończycach w gminie Michałowice.</li>
+            <li><b>Osiedle Akacjowe</b> - to enklawa domów jednorodzinnych po 169 m2 każdy.</li>
+            <li><b>Osiedle Glinki</b> - to domy jednorodzinne w zabudowie bliźniaczej usadowione na działkach ok 4,5 arowych.</li>
+            <li><b>Osiedle Na Wzgórzu</b> - to osiedle domów jednorodzinnych wybudowanych w Nowej Hucie. Domy po 155m2 każdy usadowiony na 4,5 arowej działce.</li>
+            <li><b>Perła Wojnicka</b> - to elegancki Dom o powierzchni użytkowej 140 m2, usadowiony na działce 6 arowej.</li>
+            <li><b>Osiedle Zielonki</b> - to urocze osiedle położone w Podkrakowskich Zielonkach.</li>  
+            <li><b>Osielde Grajewo</b> - to kameralne osiedle położone w miejscowości Grajewo.</li>
     </ul> 
 </div>
