--- a/src/app/workspace/welcome-tab/welcome-tab.component.scss
+++ b/src/app/workspace/welcome-tab/welcome-tab.component.scss
@@ -53,6 +53,9 @@
     p {
         color: #676767;
         text-align: justify;
+        letter-spacing: 0.6px;
+        word-spacing: 1px;
+        line-height: 1.5;
     }
     .divider{
         width: 10%;
