--- a/src/app/workspace/real-estate/real-estate.component.scss
+++ b/src/app/workspace/real-estate/real-estate.component.scss
@@ -1,8 +1,5 @@
 .main-photo {
-   // background: url('/assets/sloneczna-wadowska/orginal1-1200x563.jpg') no-repeat center center fixed;
-    // width: 100%;
     height: 563px;
-     //background-size: '100% 100%';
     background-size:cover;
     display: flex;
     justify-content: center;
@@ -23,7 +20,6 @@
     }
 
     .read-more-button {
-        //margin: 0 auto;
         text-align: center
     }
 }
@@ -38,7 +34,7 @@
 
     margin: 0 8% 0 8%;
     .real-estate-description-container{
-        p{
+        p, li{
             text-align: justify;
         }
     }
@@ -59,9 +55,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-evenly;
-           // height: 200px;
             img {
-             // width: 200px;
               object-fit: cover;
               margin: 5px;
             }
@@ -85,9 +79,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-evenly;
-           // height: 200px;
             img {
-             // width: 200px;
               object-fit: cover;
               margin: 5px;
             }
@@ -101,15 +93,11 @@
     .map{
         height: 500px;
         width: 100%;
-        // height: 100%;
-        // width: 40%;
     }
 
     .map-mobile{
         height: 300px;
         width: 100%;
-        // height: 100%;
-        // width: 40%;
     }
 }
 
@@ -140,14 +128,14 @@
     min-width: 320px;
   }
   
-  gallery {
-    font-size: 16px;
-  }
-  
-  
-  
   .lightbox-example, .gallerize-example {
     margin: 2em;
+  }
+
+  p,li {
+    letter-spacing: 0.6px;
+    word-spacing: 1px;
+    line-height: 1.5;
   }
 
 }
