--- a/src/app/workspace/apartment-properties/apartment-properties.component.scss
+++ b/src/app/workspace/apartment-properties/apartment-properties.component.scss
@@ -29,6 +29,13 @@
     }
 }
 
+.prop-mobile{
+    .aprtment-name{
+        color: #444444; 
+        font-weight: bold;
+    }
+}
+
 p {
     letter-spacing: 0.6px;
     word-spacing: 1px;
