--- a/src/app/layout-shell/layout/layout.component.html
+++ b/src/app/layout-shell/layout/layout.component.html
@@ -3,5 +3,5 @@
         <app-sidenav></app-sidenav>
     </div>
 
-    <app-footer></app-footer>
+    <app-footer class="footer"></app-footer>
 </div>
