--- a/src/app/workspace/real-estate-list/real-estate-list.component.scss
+++ b/src/app/workspace/real-estate-list/real-estate-list.component.scss
@@ -12,7 +12,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-   
+    // visibility: hidden;
     p {
         font-size: 250%;
         font-weight: bold;
