--- a/src/app/workspace/apartment-properties/apartment-properties.component.scss
+++ b/src/app/workspace/apartment-properties/apartment-properties.component.scss
@@ -27,6 +27,10 @@
         color: #444444; 
         font-weight: bold;
     }
+
+    .properties-properties-container {
+        margin: 0 1% 0 1%;;
+    }
 }
 
 .prop-mobile{
