--- a/src/app/workspace/apartment-properties/apartment-properties.component.scss
+++ b/src/app/workspace/apartment-properties/apartment-properties.component.scss
@@ -1,7 +1,15 @@
 
 .title {
     h1 {
-        font-size: 220%;
+        font-size: 200%;
+        color: #444444; 
+        text-align: center
+    }
+}
+
+.title-mobile {
+    h1 {
+        font-size: 150%;
         color: #444444; 
         text-align: center
     }
@@ -9,7 +17,7 @@
 .apartment-properties-agreggated-data {
     text-align: center;
     h1 {
-        font-size: 220%;
+        font-size: 200%;
         color: #444444; 
         text-align: center
     }
