--- a/src/app/workspace/contact/contact.component.html
+++ b/src/app/workspace/contact/contact.component.html
@@ -10,7 +10,7 @@
       <h1>EMAIL:</h1>
       <span>twojdom@gmail.com</span>
       <h1>ADRES:</h1>
-      <p>Twój Dom Group</p>
+      <p>Dewi Invest</p>
       <p>ul. Podmiłów 4</p>
       <p>30-894 Kraków</p>
     </div>
