--- a/src/app/workspace/house-properties/house-properties.component.scss
+++ b/src/app/workspace/house-properties/house-properties.component.scss
@@ -12,7 +12,16 @@
 .house-properties-agreggated-data{
     text-align: center;
     h1 {
-        font-size: 220%;
+        font-size: 200%;
+        color: #444444; 
+        text-align: center
+    }
+}
+
+.house-properties-agreggated-data-mobile{
+    text-align: center;
+    h1 {
+        font-size: 130%;
         color: #444444; 
         text-align: center
     }
