--- a/src/app/workspace/house-properties/house-properties.component.html
+++ b/src/app/workspace/house-properties/house-properties.component.html
@@ -1,7 +1,7 @@
 <div *ngFor="let housePropertise of housePropertises">
-<div class= "house-properties-agreggated-data">
+<div [ngClass]="mobileQuery.matches ? 'house-properties-agreggated-data-mobile' : 'house-properties-agreggated-data'">
         <h1>Parametry budynków {{housePropertise.buildingsName}}</h1>
-        <p>pow.użytkowa {{housePropertise.functionalSurface}} <span>&#13217;</span>, pow.podłóg {{housePropertise.floorSurfaces}} <span>&#13217;</span> </p>
+        <p>pow.użytkowa {{housePropertise.functionalSurface}} m2, pow.podłóg {{housePropertise.floorSurfaces}} m2 </p>
         <div class ="divider">
                 <mat-divider></mat-divider>
     </div>
