--- a/src/app/workspace/welcome-tab/welcome-tab.component.scss
+++ b/src/app/workspace/welcome-tab/welcome-tab.component.scss
@@ -66,10 +66,10 @@
     margin: 2% 2% 0 8%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: start;
 
     .current-investments{
-        margin: 2% 0 0 0;
+        margin: 2% 2% 0 0;
         h1 {
             font-weight: bold;
             font-size: 1.6rem;
