--- a/src/app/workspace/welcome-tab/welcome-tab.component.scss
+++ b/src/app/workspace/welcome-tab/welcome-tab.component.scss
@@ -66,7 +66,7 @@
     margin: 2% 2% 0 8%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: start;
+    justify-content: flex-start;
 
     .current-investments{
         margin: 2% 2% 0 0;
