--- a/src/app/workspace/contact/contact.component.html
+++ b/src/app/workspace/contact/contact.component.html
@@ -11,8 +11,8 @@
       <h1>EMAIL:</h1>
       <p>dewi.invest@wp.pl</p>
       <h1>ADRES:</h1>
-      <p>Dewi Invest</p>
-      <p>ul. Podmiłów 4</p>
+      <p>Adler spółka z o.o.</p>
+      <p>ul. Podmiłów 4b</p>
       <p>30-894 Kraków</p>
     </div>
 
