--- a/src/app/workspace/real-estate-list/real-estate-list.component.html
+++ b/src/app/workspace/real-estate-list/real-estate-list.component.html
@@ -10,7 +10,7 @@
     [ngStyle]="{'visibility': isLoading ? 'hidden' : 'visible' }"
     [ngClass]="mobileQuery.matches ? 'real-estate-list-container-mobile' : 'real-estate-list-container'"
 >
-<h1>{{titlte}}</h1>
+<!-- <h1>{{titlte}}</h1> -->
 
 <div class ="divider">
     <mat-divider></mat-divider>
