--- a/src/app/shared/components/flip-card/flip-card.component.scss
+++ b/src/app/shared/components/flip-card/flip-card.component.scss
@@ -5,6 +5,9 @@
       }
       
       .tp-box {
+        -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+        -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+        box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
         position: relative;
         width: 360px;
         height: 260px;
@@ -18,6 +21,15 @@
                 p {
                   margin: 30% 0 0 0;
                   // background: none repeat scroll 0 0 rgba(0,0,0,.5);
+                }
+                h1{
+                  margin: 6% 0% 6% 0%;
+                  text-align: center;
+                }
+                li {
+                  margin: 1% 0% 0 3%;
+                  text-align: left;
+                  font-size: 60%;
                 }
       }
 
@@ -35,6 +47,14 @@
           p {
               margin: 25% 0 0 0;
                   // background: none repeat scroll 0 0 rgba(0,0,0,.5);
+          }
+          h1{
+            text-align: center;
+          }
+          li {
+            margin: 1% 0% 0 3%;
+            text-align: left;
+            font-size: 60%;
           }
       }
 
@@ -59,7 +79,7 @@
                 user-select: none;
       }
       .tp-box__front {
-        background: green;
+      
         -webkit-transform : rotateY(0deg);
         -ms-transform     : rotateY(0deg);
         transform         : rotateY(0deg);
@@ -68,7 +88,7 @@
         }
       }
       .tp-box__back {
-        background: #23262d;
+        background: none repeat scroll 0 0 #6691bd;
         -webkit-transform : rotateY(-180deg);
         -ms-transform     : rotateY(-180deg);
         transform         : rotateY(-180deg);
