--- a/src/app/workspace/welcome-tab/welcome-tab.component.html
+++ b/src/app/workspace/welcome-tab/welcome-tab.component.html
@@ -25,7 +25,7 @@
               [overlayColor]="overlayColor"
               [hideOverlay]="hideOverlay"
             >
-              <ng-container>
+              <ng-container >
                 <div class = "horizontal-photo-description-container">
                     <div *ngIf = "slide.isWelcomeImage"   class = "welcome-text">
                         <h1>{{slide.title}}</h1>
@@ -61,10 +61,11 @@
               <button  mat-raised-button color="primary" (click)="goTocurrentInvestments()">Zobacz wszystkie</button>
           </div>
 
-          <div class="current-investments"  *ngFor="let flipImage of realEstateFlipImages; let i = index" >
+          <div class="current-investments" *ngFor="let flipImage of realEstateFlipImages; let i = index" >
                   <app-flip-card 
                   (click)="goToSelectedInvestment(flipImage.realEstateLink)"
-                  [description]= "flipImage.realEstateDescription" 
+                  [descriptions]= "flipImage.realEstateDescriptions" 
+                  [title]= "flipImage.title" 
                   [imageUrl]= "flipImage.realEstateImageUrl"
                   [realEstateName] = "flipImage.realEstateName"
                   ></app-flip-card>
@@ -76,15 +77,15 @@
             'background': ' url(' + backgroundCounterUrl  + ')', 'background-size': '100% 100%'
           }">
           <div class="container-item">
-            <app-animated-counter #counter1 [digit]="22" [duration]="1000"></app-animated-counter>
+            <app-animated-counter #counter1 [digit]="24" [duration]="1000"></app-animated-counter>
             <p>Inwestycji</p>
           </div>
           <div class="container-item">
-            <app-animated-counter #counter2 [digit]="50" [duration]="1000"></app-animated-counter>
+            <app-animated-counter #counter2 [digit]="147" [duration]="1000"></app-animated-counter>
             <p>Sprzedanych domów</p>
           </div >
           <div  class="container-item">
-            <app-animated-counter #counter3 [digit]="100" [duration]="1000"></app-animated-counter>
+            <app-animated-counter #counter3 [digit]="312" [duration]="1000"></app-animated-counter>
             <p>Zadowolonych mieszkanców</p>
           </div>
          
@@ -97,8 +98,7 @@
           <div class="map">
               <app-map [lngLat] = "lngLat"></app-map>
           </div>
-         
-
+   
           <div class ="company-info-item">
             <h1>TELEFON:</h1>
             <p>Dział sprzedaży: +48 531 843 594</p>
@@ -106,8 +106,8 @@
             <h1>EMAIL:</h1>
             <span>dewi.invest@wp.pl</span>
             <h1>ADRES:</h1>
-            <p>Dewi Invest</p>
-            <p>ul. Podmiłów 4</p>
+            <p>Adler spółka z o.o.</p>
+            <p>ul. Podmiłów 4b</p>
             <p>30-894 Kraków</p>
           </div>
 
@@ -117,6 +117,6 @@
             <p>Rejestru Sądowego przez Sąd</p>
             <p> Rejonowy dla Krakowa-Śródmieścia, </p>
             <p> XI Wydział Gospodarczy pod numerem </p>
-            <p> KRS 0000295820, NIP 6770065412</p>
+            <p> KRS 0000653927, NIP 6793139120</p>
           </div>
         </div>
